[package]
name = "encryption_oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0"
base64 = "0.21"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
